deploy/dev-ngsa-asb-westus2/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "ngsa/ngsa-memory-westus2-dev.cse.ms"
    - "ngsa/ngsa-cosmos-westus2-dev.cse.ms"
    - "ngsa/ngsa-java-westus2-dev.cse.ms"
    - "monitoring/grafana-westus2-dev.cse.ms"
    - "loderunner/loderunner-westus2-dev.cse.ms"
    - "azure-arc/harbor-core-westus2-dev.cse.ms"
